kubernetes/portainer/portainer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portainer
  namespace: portainer
  labels:
    app: portainer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portainer
  template:
    metadata:
      labels:
        app: portainer
    spec:
      tolerations:
        - key: "node.kubernetes.io/unreachable"
          effect: "NoExecute"
          tolerationSeconds: 0
      containers:
        - name: portainer
          image: portainer/portainer-ce:2.21.4
          ports:
            - containerPort: 9443
          volumeMounts:
            - name: portainer-storage
              mountPath: /data
      volumes:
        - name: portainer-storage
          persistentVolumeClaim:
            claimName: portainer-pvc
---
apiVersion: v1
kind: Service
metadata:
  namespace: portainer
  name: portainer-webui
spec:
  selector:
    app: portainer
  ports:
    - protocol: TCP
      name: webui
      port: 9443
      targetPort: 9443
