kubernetes/portainer/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portainer
  namespace: portainer
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`portainer.skippythesnake.com`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: traefik
      services:
        - name: portainer-webui
          port: 9443
          scheme: https
